# emu6502

./: .gitignore  CHECKLIST  Cargo.toml  README.md
.github/: tests.yml
.github/workflows/: anima_tests.yml  tests.yml
anima/: Cargo.toml  README.md  pyproject.toml
anima/src/: lib.rs
anima6502/: Cargo.toml  README.md
anima6502/python/anima/: __init__.py  __main__.py
bins/: test_bins.6502
python/: num  num_tables.py  nums.txt  ops  ops.py  ops_data.py
src/: main.rs
src/tests/: utils_test.rs
tests/: utils_test.rs
tools/datagen/: gen_data.py  num_utils.py  opcodes.json  ops
tools/datagen/number/: num  rpn.py  tables.py  utils.py
vm6502/: Cargo.toml  README.md
vm6502/interfaces/: Cargo.toml
vm6502/interfaces/src/: lib.rs
vm6502/src/: assembler.rs  control.rs  instructions.rs  lib.rs  memory.rs  program.rs  registers.rs  stack.rs  utils.rs  vm.rs
vm6502/src/vm/: control.rs  heap.rs  instructions.rs  mod.rs  registers.rs  stack.rs  status.rs
vm6502/tests/: conditional_instructions.rs  macros_test.rs  status_macros_test.rs  test_heap_interface.rs  vm_control_arm_test.rs  vm_instruction_test.rs  vm_memory_test.rs  vm_mode_test.rs  vm_test.rs
