[package]
name = "emu6502"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.2"
bytes = "1.2.1"
hex = "0.4.3"
rand = "0.8.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.vm6502]
path = "vm6502"

[features]
defaults = ["vm6502/pretty_printing"]

ugly_vm = ["vm6502/full_debug_printing"]
debug_vm = ["vm6502/debug_printing"]
pretty_vm = ["vm6502/pretty_printing"]