[package]
name = "emu6502"
version = "0.1.1"
edition = "2021"
description = "A 6502 emulator using the vm6502 backend."
license = "GPL-3.0-or-later"
repository = "https://github.com/GRAYgoose124/emu6502"

[dependencies]
# Sister project dependencies
vm6502 = "0.1.0"
arrayvec = "0.7.2"
bytes = "1.2.1"
hex = "0.4.3"
rand = "0.8.5"

# Sister project sub-crate library.
[dependencies.anima6502]
path = "anima"
version = ">=0.1.0, <0.2.0"

[features]
defaults = ["vm6502/pretty_printing"]

ugly_vm = ["vm6502/full_debug_printing"]
debug_vm = ["vm6502/debug_printing"]
pretty_vm = ["vm6502/pretty_printing"]
super_vm = ["vm6502/ops_only", "vm6502/show_fetched", "vm6502/show_vm_instr_tick_match"]