[package]
name = "anima6502"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/GRAYgoose124/emu6502"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "anima6502"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }

[dependencies.vm6502]
path = "../vm6502"

# TODO: If we could get maturin to compile the script front end, that'd be great.
[package.metadata.maturin]
python-source = "python"
name = "anima._anima"
