[package]
name = "vm6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
bitmatch = "0.1.1"
bytes = "1.2.1"
derivative = "2.2.0"
hex = "0.4.3"
rand = "0.8.5"

[lib]
crate-type = ["rlib"]

[features]
default = []
debug_printing = ["show_relative_offset", "show_vm_post_op", "show_mode", "show_status", "shortd_printing"]
shortd_printing = ["show_vm_instr", "show_vm_instr", "show_vm_tick_arms", "show_ticked_instrs"]
show_vm_instr = []
show_ticked_instrs = []
show_vm_tick_arms = []
show_vm_post_op = []
show_mode = []
show_status = ["show_status_set", "show_status_get"]
show_status_set = []
show_status_get = []
show_relative_offset =[]
show_fetched = []
show_vm_instr_tick_match = []
